@@ -1,12 +1,14 @@
 49.alpha - DEVEL
 ==========================
 
+- Start the focus at the center of the grid and show it from the get-go
 - Let the grid be unselected by pressing escape or clicking outside
 - Update ctrl+keys to cycle through cells linearly (#5)
 - Update tab behavior to cycle through the grid only once (#5)
 - Update earmark highlighting to the new accent color palette
 - Add strike-through for earmark warnings
 - Add pause animation
+- Add short animation to autoclean earmarks
 - Cap grid margins at 25
 - Fix trapped focus during pause
 
